# cfe-eds-framework

./: .gitignore  CMakeLists.txt  README.md
apps/ci_lab/eds/: ci_lab.xml
apps/sample_app/eds/: sample_app.xml
apps/sch_lab/eds/: sch_lab.xml
cfe/: CMakeLists.txt
cfe/cmake/: arch_build.cmake  mission_build.cmake  version.cmake
cfe/cmake/sample_defs/: cpu1_platform_cfg.h  sample_mission_cfg.h  toolchain-i686-rtems4.11.cmake
cfe/fsw/cfe-core/: CMakeLists.txt  arch_build.cmake
cmake/: arch_build.cmake  mission_build.cmake  mission_defaults.cmake
cmake/Modules/Platform/: RTEMS.cmake
cmake/sample_defs/: cpu1_platform_cfg.h  default_osconfig.h  sample_mission_cfg.h
cmake/sample_defs/eds/: cfe-topicids.xml  config.xml  mission_config_eds.xml
eds/: ci_lab.xml  sample.xml  sample_app.xml  to_lab.xml
fsw/cfe-core/eds/: cfe_es.xml  cfe_evs.xml  cfe_sb.xml  (+2 more)
fsw/inc/: cfe_psp.h  cfe_psp_configdata.h
fsw/mcp750-vxworks6.4/: readme.txt
fsw/mission_inc/: sample_app_perfids.h
fsw/pc-rtems/: README.txt
fsw/platform_inc/: sample_app_table.h  sch_lab_sched_tab.h  to_lab_msgids.h  to_lab_sub_table.h
fsw/shared/: cfe_psp_configdata.c  cfe_psp_eeprom.c  cfe_psp_memrange.c  cfe_psp_memutils.c  cfe_psp_module.c  cfe_psp_module.h  cfe_psp_port.c  cfe_psp_ram.c
fsw/src/: ci_lab_app.c  ci_lab_app.h  sample_app.c  sample_app.h  sample_table.c  sample_table.h  sch_lab_app.c  sch_lab_table.c  to_lab_app.c  to_lab_app.h  to_lab_msg.h
fsw/tables/: sample_app_tbl.c  to_lab_sub.c
fsw/ut-stubs/: ut_psp_stubs.c
unit-test/coveragetest/: coveragetest_sample_app.c
(+250 files in other folders)
